[gd_scene format=3 uid="uid://dgy0co378g748"]

[ext_resource type="Script" uid="uid://b2g2v2ya1srtn" path="res://scripts/actors/enemies/dust_walker.gd" id="1_q8aky"]
[ext_resource type="Script" uid="uid://cpk2dipypjlet" path="res://scripts/actors/enemies/humanoid_model.gd" id="1_xdkhf"]
[ext_resource type="PackedScene" uid="uid://dtuiyp383fp3c" path="res://scenes/enemies/DustWalker/dust_walker_visuals.tscn" id="3_4mjbg"]
[ext_resource type="PackedScene" uid="uid://bukpe1wm5nsne" path="res://scenes/faction_component.tscn" id="4_4mjbg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xdkhf"]
radius = 0.38378906
height = 1.7531738

[node name="DustWalker" type="CharacterBody3D" unique_id=1171000512]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_q8aky")

[node name="DustWalkerModel" type="Node3D" parent="." unique_id=24536248]
script = ExtResource("1_xdkhf")

[node name="DustWalkerVisuals" parent="." unique_id=1197851013 instance=ExtResource("3_4mjbg")]

[node name="Collider" type="CollisionShape3D" parent="." unique_id=1423834608]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.91665137, 0)
shape = SubResource("CapsuleShape3D_xdkhf")
debug_color = Color(0.7754044, 3.3643395e-05, 0.36344633, 0.41960785)

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." unique_id=200956997]
path_desired_distance = 0.75
target_desired_distance = 0.75
avoidance_enabled = true
radius = 1.0
avoidance_layers = 15
avoidance_mask = 15
debug_enabled = true
debug_path_custom_color = Color(1, 0.07058824, 0.019607844, 1)

[node name="FactionComponent" parent="." unique_id=1729141699 instance=ExtResource("4_4mjbg")]
faction = 3
